--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,16 +2,28 @@ name: CI/CD for Sauter University
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      ['main']
 
 jobs:
-  build:
+  build-and-push:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
-      - name: Build the Docker image
-        run: docker build -t your-dockerhub-username/sauter-university .
-      - name: Login to Docker Hub
-        run: docker login -u your-dockerhub-username -p ${{ secrets.DOCKER_HUB_PASSWORD }}
-      - name: Push the Docker image
-        run: docker push your-dockerhub-username/sauter-university
+    - name: Check out the repository
+      uses: actions/checkout@v2
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+
+    - name: Login to DockerHub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v2
+      with:
+        push: true
+        tags: ${{ secrets.DOCKER_USERNAME }}/sauter-university:latest
